--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
     padding-top: 35px;
     padding-left: 30px;
-    color:rgb(102, 112, 247);
-    background-color:rgb(44, 44, 42);
+    color:rgb(46, 157, 248);
+    background-color:rgb(90, 90, 90);
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -17,12 +17,12 @@ img{
     block-size: 3em;
     padding-right: 15px;
 }
-#one,#two,#three{
+div{
     padding-top: 20px;
    
 }
 
-#email,#btn,#clear{
+#email,#btn{
     border-radius: 10px;
     border-width: 0.3em;
     margin-top: 20px;
@@ -38,7 +38,7 @@ padding-top: 6px;
 padding-bottom: 20px;
 }
 
-input{  
+input{ 
 border-radius: 20px;
 color:rgb(15, 15, 15);
 background-color: rgb(255, 255, 255);
@@ -46,13 +46,16 @@ display: inline-block;
 float: left; 
 }
 
+label{
+font-weight: lighter;
+}
+
 #truck{
     padding-bottom: -20px;;
     animation-name: truck;
-    animation-duration: 480ms;
-    animation-iteration-count: infinite;
-    display: none;
-    
+    animation-duration: 12000ms;
+    animation-iteration-count: infinite;   
+    display:none;
 
     
 }
@@ -62,7 +65,7 @@ float: left;
         0%{
             padding-left:-10px;
         }
-        10%{
+        30%{
             padding-left: 80px;
         }
         100%{
