--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     padding-top: 50px;
     padding-left: 60px;
+    padding-bottom: 50px;
     color:rgb(117, 255, 135);
     background-color:rgb(56, 56, 56);
     font-weight: bolder;
