--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
     padding-top: 50px;
-    padding-left: 60px;
+    padding-left: 30px;
     padding-bottom: 50px;
     color:rgb(117, 255, 135);
-    background-color:rgb(56, 56, 56);
+    background-color:#383838;
+    justify-content: center;
     font-weight: bolder;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
