--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body{
     padding-top: 50px;
-    padding-left: 30px;
+    padding-left: 20px;
     padding-bottom: 50px;
-    color:rgb(117, 255, 135);
-    background-color:#383838;
+    color:rgb(190, 190, 190);
+    background-color:#292929;
     justify-content: center;
     font-weight: bolder;
+    display: grid;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
@@ -23,20 +24,24 @@ img{
     block-size: 3em;
     padding-right: 15px;
 }
-div{
-    padding-top: 20px;
-   
+#pick-up,#delivery{
+    margin-left:40px;   
+    color:dimgrey;
 }
+
+
 #btn{
-    padding: 2px 8px 2px 8px;
+    padding: 2px 25px 2px 25px;
     font-size: 15px;
     font-weight: bold;
+    margin-left: 40px;
+    display: inline-block;
+
 }
 #email,#btn{
     border-radius: 10px;
     border-width: 0.3em;
     margin-top: 20px;
-    padding-left:5px;
     font-weight: bold;
     background-color: rgb(245, 221, 83);
     color: black;
@@ -45,7 +50,8 @@ div{
 
 #jbh{
 padding-top: 6px;
-padding-bottom: 20px;
+padding-bottom: 40px;
+padding-left: 8px;;
 }
 
 input{ 
@@ -56,6 +62,7 @@ background-color: rgb(255, 255, 255);
 display: inline-block;
 margin-right: 10px;
 float:left;
+
 }
 
 ::placeholder{
@@ -64,6 +71,7 @@ font-weight: lighter;
 
 label{
 font-weight:lighter;
+color:rgb(62, 138, 252);
 }
 
 #truck{
