--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     padding-left: 20px;
     padding-bottom: 50px;
     color:rgb(131, 250, 131);
-    background-color:#333333;
+    background-color:#1d1c1c;
     justify-content: center;
     display: grid;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
