--- a/style.css
+++ b/style.css
@@ -3,19 +3,24 @@ body{
     padding-left: 20px;
     padding-bottom: 50px;
     color:rgb(131, 250, 131);
-    background-color:#1d1c1c;
+    background-color:#333333;
     justify-content: center;
     display: grid;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
-
+#one{
+    line-height: 20px;
+}
+#three{
+    line-height: 25px;
+}
 a{
     opacity: 0;
     font-size: xx-small;
 }
 label{
     padding-left: 20px;
-    line-height: 28px;
+    line-height: 8px;
     font-size: 16px;
 
     
@@ -23,17 +28,19 @@ label{
 
 img{
     block-size: 2.9em;
-    margin-left: 10px;
+    margin-left: 6px;
 }
 #pickup,#delivery{
      
     color:rgb(252, 75, 62);
     margin-left:-15px;
+    line-height: 20px;
 }
 
 #pu,#del{
     margin-left:51px;  
-    margin-top:8px;;
+    margin-top:8px;
+    line-height: 20px;
 }
 
 
@@ -71,7 +78,6 @@ background-color: rgb(255, 255, 255);
 display: inline-block;
 margin-right: 6px;
 float:left;
-
 }
 
 
