--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 body{
-    padding-top: 50px;
-    padding-left: 20px;
-    padding-bottom: 50px;
+    padding-top: 40px;
     color:rgb(131, 250, 131);
     background-color:#333333;
-    justify-content: center;
-    display: grid;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+
 #one{
     line-height: 20px;
+    justify-content: center;
+    display: grid;
 }
 #three{
     line-height: 25px;
@@ -22,14 +21,8 @@ label{
     padding-left: 20px;
     line-height: 8px;
     font-size: 16px;
-
-    
 }
 
-img{
-    block-size: 2.9em;
-    margin-left: 6px;
-}
 #pickup,#delivery{
     color:rgb(252, 147, 62);
     margin-left:-15px;
@@ -67,7 +60,11 @@ img{
 #jbh{
 padding-top: 6px;
 padding-bottom: 40px;
-padding-left: 3px;;
+padding-left: 3px;
+justify-content: center;
+display: grid;
+block-size: 2.9em;
+margin-left: 6px;
 }
 ::placeholder{
     font-weight: lighter;
@@ -90,27 +87,11 @@ color:rgb(253, 114, 59);
 #optional{
     color:rgb(86, 164, 253);
 }
-#truck{
-    padding-bottom: -20px;;
-    animation-name: truck;
-    animation-duration: 12000ms;
-    animation-iteration-count: infinite;   
-    display: none;
-    
+
+footer{
+color: rgb(194, 192, 192);
+bottom:10px;
+width:100%;
+height:60px; 
+padding-left:40px;
 }
-
-    @keyframes truck {
-
-        0%{
-            padding-left:-10px;
-        }
-        30%{
-            padding-left: 80px;
-        }
-        100%{
-            padding-left: -10px;
-        }
-                
-    }
-
-   
