--- a/style.css
+++ b/style.css
@@ -1,28 +1,29 @@
-body{
+html,body{
     background: rgb(87, 86, 86);
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-top: 25px;
-    height: 620px;
+    margin:0;
+    margin-bottom: 0px;
+    padding:0;   
+    
 }
-
 img{
     width:100%;
     height:100%;
-    padding-bottom: 40px;
-    margin-right:-17px;
+    padding: 20px 0px 30px 0px;
+    margin-right:-11px;
 }
 
 #container{
-    box-sizing: border-box;
     background: rgb(44, 44, 44);
-
+    box-sizing: border-box;
     text-align: center;
-    display:block;
-    margin: auto;
-    width: 355px;
+    margin:auto;
+    width: 290px;
+    height:85%;
     line-height: 1.0rem;
     box-shadow: 10px 10px 15px rgb(13, 13, 13), -2px -2px 8px rgb(13, 13, 13);
-    padding:40px 90px;
+    padding:6px 58px;
+    padding-bottom: 15px;
     border:2px solid rgb(255, 51, 51);
     border-radius: 10px;
 }
@@ -38,15 +39,14 @@ label[name="pudel"]{
     color:rgb(105, 157, 253); 
     margin: 15px 0px;
     justify-content: left;
-    padding:0px 5px
+    padding:5px 5px
 }
 
 div #two{
     display: inline-block;
-    margin-top: 12px;
-    padding: 10px 0px;
+    margin-top: 1px;
+    padding: 0px 0px;
     width: 100%;
-
 }
       
 
@@ -57,7 +57,9 @@ div #two{
     font-weight: bold;
     font-size:15px;
     line-height: 1.2rem;
+    margin: 10px 0px;
     border-radius: 13px;
+    margin-bottom: 10px;
     
 }
 
@@ -65,48 +67,23 @@ div #two{
     cursor: pointer;
 }
 
- 
-
 #ta{
-    min-width: 172px;
-    min-height: 50px;
-    max-width: 172px;
-    max-height: 50px;
-    width:100%;
     border-radius:10px;
-    margin-top: 1.0rem;
     font-family: inherit;
+    max-width:178px;
+    min-width:178px;
+
+    max-height: 60px;
+    min-height: 60px;
+    box-sizing: border-box;
+}
+
+div #box{
+    margin-top: 1.0rem;
 }
 #ta,input:focus{
     outline-color:rgb(105, 157, 253);
 }
-
-div #three{
-    padding: 20px 10px;
+#spacing{
+    padding:15px
 }
-
-#foot{
-    text-align:center;
-    color: rgb(255,255,255);
-    bottom:5px;
-    position: relative;
-    animation:foot 10s;
-    animation-iteration-count: infinite;
-}
-
-
-/* 
-@keyframes foot {
-        0%{
-            margin-left: 0px;
-        }
-        25%{
-            margin-left: -600px;
-        }
-        75%{
-            margin-left: 600px;
-        }
-        100%{
-            margin-left: 0px;
-        }
-} */
