--- a/style.css
+++ b/style.css
@@ -1,65 +1,81 @@
 html,body{
-    background: rgb(87, 86, 86);
+    background:#005dba;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin:0;
-    margin-bottom: 0px;
-    padding:0;   
-    
+    margin:auto;
+    min-height:100%;
+    max-height:100%;
+    align-items: center;
+    justify-content: center;
+}
+*{
+    font-family: inherit;
 }
 img{
     width:100%;
     height:100%;
-    padding: 20px 0px 30px 0px;
-    margin-right:-11px;
+    padding: 10px 0px 30px 0px;   
 }
 
 #container{
-    background: rgb(44, 44, 44);
+    background:white;
     box-sizing: border-box;
     text-align: center;
     margin:auto;
-    width: 290px;
-    height:85%;
-    line-height: 1.0rem;
-    box-shadow: 10px 10px 15px rgb(13, 13, 13), -2px -2px 8px rgb(13, 13, 13);
-    padding:6px 58px;
-    padding-bottom: 15px;
-    border:2px solid rgb(255, 51, 51);
-    border-radius: 10px;
+    width: 300px;
+    line-height: 0.4rem;
+    padding:40px 50px;
+    padding-bottom:25px;
+    border-radius: 5px;
 }
 
 input[type="text"],input[type="email"]{
-    border-radius: 10px;
     display: inline;
     width:100%;
+    background-color: rgb(218, 218, 218);
+    border-radius: 5px;
+    padding: 6px 0px;
+    border:none;
+}
+
+input::placeholder{
+    color:rgb(117, 117, 117);
+    font-size:10px;
+    font-weight:bold;
+}
+
+textarea::placeholder{
+    color:rgb(117, 117, 117) !important;
+    font-size:10px !important;
+    font-weight: bold !important;
 }
 
 label[name="pudel"]{
     display: inline-block;
-    color:rgb(105, 157, 253); 
+    color:rgb(56, 56, 56);
     margin: 15px 0px;
     justify-content: left;
-    padding:5px 5px
+    padding:5px 5px;
+    font-weight:bold ;
 }
 
 div #two{
-    display: inline-block;
-    margin-top: 1px;
-    padding: 0px 0px;
+
     width: 100%;
 }
       
 
 #btn{
-    width:95%;
-    background: rgb(252, 231, 49);
-    border: 4px solid black;
+    width:100%;
+    background:rgb(56, 56, 56);
     font-weight: bold;
-    font-size:15px;
+    font-size:10px;
     line-height: 1.2rem;
     margin: 10px 0px;
-    border-radius: 13px;
     margin-bottom: 10px;
+    border: none;
+    border-radius: 5px;
+    padding:10px;
+    color: white;
     
 }
 
@@ -68,18 +84,19 @@ div #two{
 }
 
 #ta{
-    border-radius:10px;
-    font-family: inherit;
-    max-width:178px;
-    min-width:178px;
-
-    max-height: 60px;
-    min-height: 60px;
-    box-sizing: border-box;
+    max-width:100%;
+    min-width:100%;
+    max-height:60px;
+    min-height:60px;
+    border:none;
+    background:rgb(218,218,218);
+    margin-top:0.3rem;
+    border-radius:5px;
+    padding: 6px 0px;
 }
 
 div #box{
-    margin-top: 1.0rem;
+    margin-top: 0.3rem;
 }
 #ta,input:focus{
     outline-color:rgb(105, 157, 253);
