--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html,body{
 img{
     width:100%;
     height:100%;
-    padding: 10px 0px 30px 0px;   
+    padding: 0px 0px 30px 0px;   
 }
 
 #container{
@@ -33,8 +33,9 @@ input[type="text"],input[type="email"]{
     width:100%;
     background-color: rgb(218, 218, 218);
     border-radius: 5px;
-    padding: 6px 0px;
+    padding: 3px 7px;
     border:none;
+    box-sizing: border-box;
 }
 
 input::placeholder{
@@ -92,7 +93,8 @@ div #two{
     background:rgb(218,218,218);
     margin-top:0.3rem;
     border-radius:5px;
-    padding: 6px 0px;
+    padding: 3px 7px;
+    box-sizing: border-box;
 }
 
 div #box{
