--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ input[type="text"],input[type="email"]{
     padding: 3px 7px;
     border:none;
     box-sizing: border-box;
+    font-weight: bold;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 input::placeholder{
