--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ html,body{
     max-height:100%;
     align-items: center;
     justify-content: center;
+    height: 100vh;
+    width:100vw;
 }
 *{
     font-family: inherit;
@@ -13,7 +15,7 @@ html,body{
 img{
     width:100%;
     height:100%;
-    padding: 0px 0px 30px 0px;   
+    padding: 0px 0px 20px 0px;   
 }
 
 #container{
@@ -93,7 +95,7 @@ div #two{
     min-height:60px;
     border:none;
     background:rgb(218,218,218);
-    margin-top:0.4rem;
+    margin-top:0.6rem;
     border-radius:5px;
     padding: 3px 7px;
     box-sizing: border-box;
