--- a/style.css
+++ b/style.css
@@ -21,10 +21,11 @@ img{
     box-sizing: border-box;
     text-align: center;
     margin:auto;
+    margin-top: 20px;
     width: 300px;
     line-height: 0.4rem;
     padding:40px 50px;
-    padding-bottom:25px;
+    padding-bottom:45px;
     border-radius: 5px;
 }
 
@@ -37,7 +38,13 @@ input[type="text"],input[type="email"]{
     border:none;
     box-sizing: border-box;
     font-weight: bold;
+    margin: 2px;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+input[type="radio"]{
+    margin-top: 12px;
+    margin-left: -5px;
 }
 
 input::placeholder{
